k8s/infrastructure/controllers/node-feature-discovery/base/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nfd
  labels:
    pod-security.kubernetes.io/enforce: privileged  # Needed by worker pods that use hostPath volumes
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
